--- a/frontend/html/checkout.html
+++ b/frontend/html/checkout.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оформлення замовлення - Зоомагазин "Амброзія"</title>
     <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/config.js"></script>
 </head>
 <body>
     <header class="header">
@@ -158,7 +159,7 @@
                 }
 
                 try {
-                    const response = await fetch('http://localhost:3000/api/orders', {
+                    const response = await fetch(`${window.API_URL}/orders`, {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
